feat: appointment observations addition
