# backend/openAPI.yml
@@ -80,6 +80,8 @@ components:
           type: string
         status:
           type: string
+        observations:
+          type: string
         created_at:
           type: string
           format: dateformat
@@ -571,6 +573,9 @@ paths:
                   status:
                     type: string
                     example: "scheduled"
+                  observations:
+                    type: string
+                    example: "Appointment observations"
       responses:
         '200':
           description: Returns a JSON containing the created appointment.
@@ -611,6 +616,9 @@ paths:
                   status:
                     type: string
                     example: "scheduled"
+                  observations:
+                    type: string
+                    example: "Appointment observations"
                   created_at:
                     type: string
                     format: dateformat
@@ -689,6 +697,9 @@ paths:
                   status:
                     type: string
                     example: "presence"
+                  observations:
+                    type: string
+                    example: "Appointment observations"
                   created_at:
                     type: string
                     format: dateformat
@@ -788,6 +799,9 @@ paths:
                     status:
                       type: string
                       example: "scheduled"
+                    observations:
+                      type: string
+                      example: "Appointment observations"
                     created_at:
                       type: string
                       format: dateformat
